--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,9 +15,9 @@
     <button id="startBtn">Start Test</button>
 
     <div class="results">
-      <p>Ping: <span id="ping">-</span>-</p>
-      <p>Download Speed: <span id="download">-</span>-</p>
-      <p>Upload Speed: <span id="upload">-</span>-</p>
+      <p>Ping: <span id="ping">-</span> ..</p>
+      <p>Download Speed: <span id="download">-</span> ..</p>
+      <p>Upload Speed: <span id="upload">-</span> ..</p>
     </div>
 
     <p class="footer">Developed by <b>Jashan,Jiya and Khushmeet
